--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/llama.cpp"]
 	path = vendor/llama.cpp
-	url = https://github.com/janhq/llama.cpp.git
+	url = git@github.com:jamfor999/llama.cpp.git
