--- a/web-app/package.json
+++ b/web-app/package.json
@@ -24,6 +24,7 @@
     "@jan/extensions-web": "workspace:*",
     "@janhq/core": "workspace:*",
     "@radix-ui/react-accordion": "1.2.11",
+    "@radix-ui/react-alert-dialog": "1.1.15",
     "@radix-ui/react-avatar": "1.1.10",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
